# qtsheet

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sheet.cpp  sheet.h
